# tfrmaker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml  lint.yml  publish-pypi.yml  publish-testpypi.yml  pull_request.yml  python-package.yml  test.yml
examples/: cnn_image_classification.py  count_tfr_records.py  create_tfr_records.py  display_tfr_records.py  dynamic_resizing.py  profiler.py  tfr_from_images.py  tfr_from_jpg.py  train_validation_split.py
examples/tfrecords/: chessbishop.tfrecord  chessknight.tfrecord  chesspawn.tfrecord  chessqueen.tfrecord  chessrook.tfrecord
examples/tfrecords/chess/: bishop.tfrecord  knight.tfrecord  pawn.tfrecord  queen.tfrecord  rook.tfrecord
src/tfrmaker/: display.py  helper.py  images.py  tfrm.py
tests/: conftest.py  context.py  data_test.json  images_test.py  utils_test.py
