[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tfrmaker"
version = "0.0.1"
authors = [
  { name="Basil C. Sunny", email="csbasil@gmail.com" },
]
description = "A Tensorflow TFRecord Utility Package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/csbasil/tfrmaker"
"Bug Tracker" = "https://github.com/csbasil/tfrmaker/issues"
